[package]
name = "mask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.6", features = ["default", "tls"] }
tonic-health = "0.5.0"
prost = "0.9"
tokio = { version = "1.15", features = ["full"] }
log = "0.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
db = { path = "../db" }
utils = { path = "../utils" }

[build-dependencies]
tonic-build = "0.6"
