[package]
name = "pcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.6", features = ["default", "tls"] }
prost = "0.9"
log = "0.4"
tokio = { version = "1.15", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
db = { path = "../db" }
utils = { path = "../utils" }
futures = "0.3"

[build-dependencies]
tonic-build = "0.6"
